syntax = "proto3";
package evmos.fees.v1;

option go_package = "github.com/tharsis/evmos/v3/x/fees/types";

// FeeContract defines an instance that organizes fee distribution conditions
// for the owner of a given smart contract
message FeeContract {
  // hex address of registered contract
  string contract_address = 1;
  // bech32 address of contract deployer
  string deployer_address = 2;
  // bech32 address of account receiving the transaction fees
  string withdraw_address = 3;
}
